# CANOpenRobotController

./: .gitmodules  CMakeLists.txt  corc.cmake
config/: KE_params.yaml
doc/3.Software/: Logging.md
src/core/: LogHelper.h  application.h
src/core/robot/: Drive.cpp  Drive.h  Joint.cpp  Joint.h  Robot.cpp  Robot.h
src/hardware/IO/: Joystick.cpp  RobotousRFT.cpp  RobotousRFT.h  Teensy32.cpp  Teensy32.h
src/hardware/drives/: EPOS4Drive.cpp  EPOS4Drive.h
